* Add a new `<AnnotatedItem>` component that displays text with a dotted underline and a tooltip. Make it more generic than the existing `<AnnotatedValue>` component, and have `<AnnotatedValue>` call `<AnnotatedItem>`. * Add the annotation to all standard facet titles. Only those with descriptions will actually render a help underline. Make the annotation optional  in `AnnotatedItem` so that it won’t render any help underline nor tooltip. Add a gap between the standard title and term count LEDs. Add new colors for the help underline on opened facets. Add `category` and `description` to the facet Typescript type. * Fix annotated-value Jest test and get to full coverage. * Clean up some comments. * Make the JSX in annotated-value.tsx more consistent. Change the `className` property of `<MarkdownSection>` to use an empty string as default to work better with Typescript.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -85,11 +85,14 @@
 @theme {
   /** Decoration colors */
   --color-help-underline: oklch(55.1% 0.027 264.364);
+  --color-open-facet-help-underline: oklch(80% 0.027 264.364);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
+    /** Decoration colors */
     --color-help-underline: oklch(70.7% 0.022 261.325);
+    --color-open-facet-help-underline: oklch(50.7% 0.022 261.325);
   }
 }
 
